--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "puppeteer-testing-library": "^0.6.0"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-e2e": "wp-scripts test-e2e",
+    "test-e2e:debug": "wp-scripts --inspect-brk test-e2e --puppeteer-devtools",
+    "test-e2e:watch": "npm run test-e2e -- --watch",
     "wp-env": "wp-env"
   }
 }
